fix(zen-browser): add overflow button to template

--- a/Assets/Templates/zen-browser/zen-userChrome.css
+++ b/Assets/Templates/zen-browser/zen-userChrome.css
@@ -86,6 +86,7 @@
 #stop-button .toolbarbutton-icon,
 #PanelUI-menu-button .toolbarbutton-icon,
 #unified-extensions-button .toolbarbutton-icon,
+#nav-bar-overflow-button .toolbarbutton-icon,
 #zen-toggle-compact-mode .toolbarbutton-icon {
   fill: var(--primary) !important;
   color: var(--primary) !important;
